gem/parser/GemParser.py
# Generated from gem/Gem.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GemParser ( Parser ):

    grammarFileName = "Gem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'use'", "'new'", "'fn'", "'type'", 
                     "'else'", "'const'", "'return'", "'in'", "'for'", "'while'", 
                     "'break'", "'continue'", "'''", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'&&'", "'||'", "'!'", "'.'", "','", 
                     "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "'->'" ]

    symbolicNames = [ "<INVALID>", "IF", "USE", "NEW", "FUNC", "TYPE", "ELSE", 
                      "CONST", "RETURN", "IN", "FOR", "WHILE", "BREAK", 
                      "CONTINUE", "APOSTROPHE", "INT", "FLOAT", "STRING", 
                      "BOOL", "ID", "ADD", "SUB", "MUL", "DIV", "MOD", "EEQ", 
                      "NEQ", "GT", "LT", "GTE", "LTE", "AND", "OR", "NOT", 
                      "DOT", "COMMA", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "RETURNS", "COMMENT", 
                      "MULTILINE_COMMENT", "WHITESPACE", "OTHER" ]

    RULE_parse = 0
    RULE_type = 1
    RULE_stmt = 2
    RULE_bodyStmt = 3
    RULE_body = 4
    RULE_ifStmt = 5
    RULE_elseifStmt = 6
    RULE_elseStmt = 7
    RULE_whileStmt = 8
    RULE_useStmt = 9
    RULE_foreachStmt = 10
    RULE_funcAssign = 11
    RULE_varAssign = 12
    RULE_arg = 13
    RULE_args = 14
    RULE_param = 15
    RULE_params = 16
    RULE_genericParams = 17
    RULE_expr = 18

    ruleNames =  [ "parse", "type", "stmt", "bodyStmt", "body", "ifStmt", 
                   "elseifStmt", "elseStmt", "whileStmt", "useStmt", "foreachStmt", 
                   "funcAssign", "varAssign", "arg", "args", "param", "params", 
                   "genericParams", "expr" ]

    EOF = Token.EOF
    IF=1
    USE=2
    NEW=3
    FUNC=4
    TYPE=5
    ELSE=6
    CONST=7
    RETURN=8
    IN=9
    FOR=10
    WHILE=11
    BREAK=12
    CONTINUE=13
    APOSTROPHE=14
    INT=15
    FLOAT=16
    STRING=17
    BOOL=18
    ID=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    MOD=24
    EEQ=25
    NEQ=26
    GT=27
    LT=28
    GTE=29
    LTE=30
    AND=31
    OR=32
    NOT=33
    DOT=34
    COMMA=35
    ASSIGN=36
    LPAREN=37
    RPAREN=38
    LBRACE=39
    RBRACE=40
    LBRACK=41
    RBRACK=42
    RETURNS=43
    COMMENT=44
    MULTILINE_COMMENT=45
    WHITESPACE=46
    OTHER=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GemParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GemParser.StmtContext)
            else:
                return self.getTypedRuleContext(GemParser.StmtContext,i)


        def getRuleIndex(self):
            return GemParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = GemParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2345056308382) != 0):
                self.state = 38
                self.stmt()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(GemParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GemParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(GemParser.TypeContext,0)


        def LBRACK(self):
            return self.getToken(GemParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(GemParser.RBRACK, 0)

        def getRuleIndex(self):
            return GemParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GemParser.TypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_type, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(GemParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GemParser.TypeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_type)
                    self.state = 49
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 50
                    self.match(GemParser.LBRACK)
                    self.state = 51
                    self.match(GemParser.RBRACK) 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssign(self):
            return self.getTypedRuleContext(GemParser.VarAssignContext,0)


        def funcAssign(self):
            return self.getTypedRuleContext(GemParser.FuncAssignContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(GemParser.WhileStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(GemParser.IfStmtContext,0)


        def useStmt(self):
            return self.getTypedRuleContext(GemParser.UseStmtContext,0)


        def foreachStmt(self):
            return self.getTypedRuleContext(GemParser.ForeachStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GemParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.varAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.funcAssign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.whileStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.ifStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.useStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.foreachStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(GemParser.StmtContext,0)


        def RETURN(self):
            return self.getToken(GemParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def BREAK(self):
            return self.getToken(GemParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(GemParser.CONTINUE, 0)

        def getRuleIndex(self):
            return GemParser.RULE_bodyStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStmt" ):
                return visitor.visitBodyStmt(self)
            else:
                return visitor.visitChildren(self)




    def bodyStmt(self):

        localctx = GemParser.BodyStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bodyStmt)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 7, 10, 11, 15, 16, 17, 18, 19, 20, 21, 33, 37, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.stmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(GemParser.RETURN)
                self.state = 68
                self.expr(0)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(GemParser.BREAK)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.match(GemParser.CONTINUE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(GemParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(GemParser.RBRACE, 0)

        def bodyStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GemParser.BodyStmtContext)
            else:
                return self.getTypedRuleContext(GemParser.BodyStmtContext,i)


        def getRuleIndex(self):
            return GemParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = GemParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(GemParser.LBRACE)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2345056320926) != 0):
                self.state = 74
                self.bodyStmt()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(GemParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GemParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(GemParser.BodyContext,0)


        def elseifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GemParser.ElseifStmtContext)
            else:
                return self.getTypedRuleContext(GemParser.ElseifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(GemParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = GemParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(GemParser.IF)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.body()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.elseifStmt() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 91
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(GemParser.ELSE, 0)

        def IF(self):
            return self.getToken(GemParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(GemParser.BodyContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_elseifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifStmt" ):
                return visitor.visitElseifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseifStmt(self):

        localctx = GemParser.ElseifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(GemParser.ELSE)
            self.state = 95
            self.match(GemParser.IF)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(GemParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(GemParser.BodyContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = GemParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(GemParser.ELSE)
            self.state = 100
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GemParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(GemParser.BodyContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = GemParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(GemParser.WHILE)
            self.state = 103
            self.expr(0)
            self.state = 104
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(GemParser.USE, 0)

        def STRING(self):
            return self.getToken(GemParser.STRING, 0)

        def getRuleIndex(self):
            return GemParser.RULE_useStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)




    def useStmt(self):

        localctx = GemParser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_useStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(GemParser.USE)
            self.state = 107
            self.match(GemParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForeachStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(GemParser.FOR, 0)

        def ID(self):
            return self.getToken(GemParser.ID, 0)

        def IN(self):
            return self.getToken(GemParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(GemParser.BodyContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_foreachStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeachStmt" ):
                return visitor.visitForeachStmt(self)
            else:
                return visitor.visitChildren(self)




    def foreachStmt(self):

        localctx = GemParser.ForeachStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_foreachStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(GemParser.FOR)
            self.state = 110
            self.match(GemParser.ID)
            self.state = 111
            self.match(GemParser.IN)
            self.state = 112
            self.expr(0)
            self.state = 113
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ret_type = None # TypeContext

        def FUNC(self):
            return self.getToken(GemParser.FUNC, 0)

        def ID(self):
            return self.getToken(GemParser.ID, 0)

        def LPAREN(self):
            return self.getToken(GemParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(GemParser.RPAREN, 0)

        def body(self):
            return self.getTypedRuleContext(GemParser.BodyContext,0)


        def genericParams(self):
            return self.getTypedRuleContext(GemParser.GenericParamsContext,0)


        def params(self):
            return self.getTypedRuleContext(GemParser.ParamsContext,0)


        def RETURNS(self):
            return self.getToken(GemParser.RETURNS, 0)

        def type_(self):
            return self.getTypedRuleContext(GemParser.TypeContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_funcAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAssign" ):
                return visitor.visitFuncAssign(self)
            else:
                return visitor.visitChildren(self)




    def funcAssign(self):

        localctx = GemParser.FuncAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(GemParser.FUNC)
            self.state = 116
            self.match(GemParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 117
                self.genericParams()


            self.state = 120
            self.match(GemParser.LPAREN)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 121
                self.params()


            self.state = 124
            self.match(GemParser.RPAREN)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 125
                self.match(GemParser.RETURNS)
                self.state = 126
                localctx.ret_type = self.type_(0)


            self.state = 129
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self):
            return self.getToken(GemParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(GemParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def ADD(self):
            return self.getToken(GemParser.ADD, 0)

        def SUB(self):
            return self.getToken(GemParser.SUB, 0)

        def MUL(self):
            return self.getToken(GemParser.MUL, 0)

        def DIV(self):
            return self.getToken(GemParser.DIV, 0)

        def MOD(self):
            return self.getToken(GemParser.MOD, 0)

        def CONST(self):
            return self.getToken(GemParser.CONST, 0)

        def getRuleIndex(self):
            return GemParser.RULE_varAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarAssign" ):
                return visitor.visitVarAssign(self)
            else:
                return visitor.visitChildren(self)




    def varAssign(self):

        localctx = GemParser.VarAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varAssign)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(GemParser.ID)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32505856) != 0):
                    self.state = 132
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32505856) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 135
                self.match(GemParser.ASSIGN)
                self.state = 136
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 137
                    self.match(GemParser.CONST)


                self.state = 140
                self.match(GemParser.ID)
                self.state = 141
                self.match(GemParser.ASSIGN)
                self.state = 142
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GemParser.ExprContext,0)


        def getRuleIndex(self):
            return GemParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = GemParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GemParser.ArgContext)
            else:
                return self.getTypedRuleContext(GemParser.ArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GemParser.COMMA)
            else:
                return self.getToken(GemParser.COMMA, i)

        def getRuleIndex(self):
            return GemParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = GemParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.arg()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 148
                self.match(GemParser.COMMA)
                self.state = 149
                self.arg()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(GemParser.TypeContext,0)


        def ID(self):
            return self.getToken(GemParser.ID, 0)

        def getRuleIndex(self):
            return GemParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = GemParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.type_(0)
            self.state = 156
            self.match(GemParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
